# interactive-dev-team

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  REPRODUCING.md  _envelope.md  docker-compose.yml  launch.sh  squadctl  tmux.conf  validation-report.md
.a5c/: package-lock.json
config/: agents.json  codex-config.toml  paperclip.md  trello.md
deploy/: MIGRATION_GONORTH.md
docs/: ADMIN_CONSOLE.md  CODEX_MIGRATION.md  MULTI_SQUAD.md  QA_TIERS.md  architecture.md  aws-deployment.md  azure-deployment.md  customization.md  founder-chat-register-sample.md  gcp-deployment.md  new-company.md  post-launch-improvements.md  telegram-setup.md
migrations/: activity_feed_v1_DOWN.sql  activity_feed_v1_UP.sql  team_memory_v1_DOWN.sql  team_memory_v1_UP.sql
scripts/: assert-admin-window.sh  bootstrap-company.sh  ceo-trello-sync.sh  deploy-gonorth.sh  dev-pre-push-hook.sh  dev-prepare-workspace.sh  setup.sh  (+12 more)
warroom2/: .gitignore  Dockerfile  README.md  pyproject.toml
warroom2/static/: index.html
warroom2/static/css/: tabs.css  warroom2.css  wizard.css
warroom2/static/js/: bus.js  company.js  copy_modal.js  files.js  helpers.js  init.js  state.js  tabs.js  terminals.js  wizard.js  ws_client.js
warroom2/tests/: __init__.py  test_agent_registry.py  test_tmux_bridge.py  test_wizard_api.py
warroom2/warroom2/: __init__.py  __main__.py  agent_registry.py  agents_api.py  app.py  auth.py  bus_tail.py  company_api.py  docker_client.py  event_relay.py  files_api.py  meta_api.py  settings.py  templates.py  tmux_bridge.py  wizard_api.py  ws_relay.py  yefet_bridge.py
(+185 files in other folders)
