[project]
name = "warroom2"
version = "0.0.1"
description = "War Room 2.0 — tabbed FastAPI UI for the war-room tmux session and openclaw bus."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "aiofiles>=24",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warroom2"]
